# AMS-Yt-dw

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
installer/: setup.iss
src/: main.rs
ui/: app.slint
