[package]
name = "ams-yt-dw"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1"
rfd = "0.14"
dirs = "5"
qrcode = "0.14"
arboard = "3"

[build-dependencies]
slint-build = "1"
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[profile.release]
opt-level = 3
lto = true
strip = true
